[package]
name = "glide"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.2"
ratatui-textarea = "0.9.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
